--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,12 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Nuntium News</string>
-    <string name="nuntium">Nuntium</string>
+    <string name="nuntium">"Nuntium"</string>
     <string name="next">Next</string>
     <string name="get_started">Get Started</string>
     <string name="browse">Browse</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
-    <string name="dark_mode">Dark Mode</string>
+    <string name="dark_mode">Dark mode</string>
     <string name="categories">Categories</string>
     <string name="cat_des">Thousands of articles in each category</string>
     <string name="bookmarks">Bookmarks</string>
@@ -52,6 +53,7 @@
     <string name="art_cat">Art</string>
     <string name="history_cat">History</string>
     <string name="fashion_cat">Fashion</string>
+
 
     <string name="change">Change</string>
 
